--- a/web/src/app/globals.css
+++ b/web/src/app/globals.css
@@ -13,3 +13,23 @@ html {
 body {
   background-color: #2c2a4a;
 }
+
+.bg-custom-nav::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: 45px 45px;
+  background-image:
+    linear-gradient(to right, grey 1px, transparent 1px),
+    linear-gradient(to bottom, grey 1px, transparent 1px);
+  background-position: center center;
+  z-index: -1;
+  mask-image: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0) 30%,
+    rgba(0, 0, 0, 0.4) 100%
+  );
+}
